--- a/Builder/Builder/Builder.vcxproj.filters
+++ b/Builder/Builder/Builder.vcxproj.filters
@@ -30,13 +30,13 @@
     <ClInclude Include="TableBuilder.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="OvalTable.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
     <ClInclude Include="TableDirector.h">
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="MagazineTableBuilder.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="OvalTableBuilder.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
@@ -50,9 +50,6 @@
     <ClCompile Include="Table.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="OvalTable.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
     <ClCompile Include="TableBuilder.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
@@ -60,6 +57,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="MagazineTableBuilder.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="OvalTableBuilder.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
